v0.10.1/_sources/generated/statsmodels.discrete.discrete_model.GeneralizedPoisson.rst.txt
statsmodels.discrete.discrete\_model.GeneralizedPoisson
=======================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: GeneralizedPoisson

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GeneralizedPoisson.cdf
         GeneralizedPoisson.cov_params_func_l1
         GeneralizedPoisson.fit
         GeneralizedPoisson.fit_regularized
         GeneralizedPoisson.from_formula
         GeneralizedPoisson.hessian
         GeneralizedPoisson.information
         GeneralizedPoisson.initialize
         GeneralizedPoisson.loglike
         GeneralizedPoisson.loglikeobs
         GeneralizedPoisson.pdf
         GeneralizedPoisson.predict
         GeneralizedPoisson.score
         GeneralizedPoisson.score_obs



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         GeneralizedPoisson.endog_names
         GeneralizedPoisson.exog_names

