v0.14.3/_sources/generated/statsmodels.discrete.discrete_model.GeneralizedPoisson.rst.txt
statsmodels.discrete.discrete\_model.GeneralizedPoisson
=======================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: GeneralizedPoisson
   :exclude-members: cdf,cov_params_func_l1,fit,fit_regularized,from_formula,get_distribution,hessian,hessian_factor,information,initialize,loglike,loglikeobs,pdf,predict,score,score_factor,score_obs,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~GeneralizedPoisson.cdf
      ~GeneralizedPoisson.cov_params_func_l1
      ~GeneralizedPoisson.fit
      ~GeneralizedPoisson.fit_regularized
      ~GeneralizedPoisson.from_formula
      ~GeneralizedPoisson.get_distribution
      ~GeneralizedPoisson.hessian
      ~GeneralizedPoisson.hessian_factor
      ~GeneralizedPoisson.information
      ~GeneralizedPoisson.initialize
      ~GeneralizedPoisson.loglike
      ~GeneralizedPoisson.loglikeobs
      ~GeneralizedPoisson.pdf
      ~GeneralizedPoisson.predict
      ~GeneralizedPoisson.score
      ~GeneralizedPoisson.score_factor
      ~GeneralizedPoisson.score_obs
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~GeneralizedPoisson.endog_names
      ~GeneralizedPoisson.exog_names
   
   
   